# simple-sperm-analyzer

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
config/: mouse_sperm_params.json  zebrafish_sperm_params.json
docs/: CASA_defination.md  Parameters.md  math_design.md
example/results/dmso_60min/Stream-2-enhanced/: Stream-2-enhanced_ana_report.txt  Stream-2-enhanced_pipeline_summary.json
example/results/trici_10mM_60min/Stream-3-enhanced/: Stream-3-enhanced_ana_motility.csv  Stream-3-enhanced_ana_report.txt  Stream-3-enhanced_det_coords.csv  Stream-3-enhanced_pipeline_summary.json  Stream-3-enhanced_trk_tracks.csv
example/results/trici_dmso_60min/Stream-2-crop-1200x1200-enhanced/: Stream-2-crop-1200x1200-enhanced_ana_motility.csv  Stream-2-crop-1200x1200-enhanced_det_coords.csv  Stream-2-crop-1200x1200-enhanced_pipeline_summary.json  Stream-2-crop-1200x1200-enhanced_trk_tracks.csv
src/: analysis.py  analyze_motility_optimizer.py  analyze_motility_stats.py  auto_contrast.py  core.py  gui.py  main.py  movie2tif.py  plot.py  plot_bonferroni.py  preprocess.py  tif_slicer.py  tracker.py
src/core/: __init__.py  analysis.py  detect.py  immotile_tracker.py  motile_tracker.py  tracker.py  visualization.py
src/core/common/: __init__.py  data_structures.py  io.py  math_utils.py
