[project]
name = "simple-sperm-analyzer"
version = "0.1.0"
description = "Scripts for sperm detection, tracking, and analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "filterpy>=1.4.5",
    "fpdf2>=2.8.5",
    "imageio-ffmpeg>=0.6.0",
    "imageio[pyav]>=2.37.2",
    "matplotlib>=3.10.7",
    "numpy>=2.2.6",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.3",
    "scikit-image>=0.25.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
    "tifffile>=2025.5.10",
    "tqdm>=4.67.1",
]
