[project]
name = "simple-sperm-analyzer"
version = "0.1.0"
description = "A simple sperm motility analysis tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "filterpy>=1.4.5",
    "joblib>=1.5.3",
    "numba>=0.63.1",
    "numpy",
    "opencv-python",
    "pandas",
    "scipy>=1.16.3",
    "tifffile",
]
